# vital_link

anchor_sensor_board/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.ci  structure.txt
anchor_sensor_board/components/ble_scanner/: CMakeLists.txt
anchor_sensor_board/components/common/: CMakeLists.txt
anchor_sensor_board/components/light_sensor/: CMakeLists.txt
anchor_sensor_board/components/mqtt_common/: CMakeLists.txt
anchor_sensor_board/components/temp_humid_sensor/: CMakeLists.txt
anchor_sensor_board/components/tvoc_sensor/: CMakeLists.txt
anchor_sensor_board/main/: CMakeLists.txt  main.c
user_sensor_board_ver2/: CMakeLists.txt  sdkconfig
user_sensor_board_ver2/components/beacon_scanner/: CMakeLists.txt
user_sensor_board_ver2/components/beacon_scanner/include/: beacon_scanner_task.h
user_sensor_board_ver2/components/beacon_scanner/src/: beacon_scanner_task.c
user_sensor_board_ver2/components/common/: CMakeLists.txt
user_sensor_board_ver2/components/common/include/: dns_checker.h  i2c_helper.h  sensor_data.h  sensor_manager.h  wifi_connect.h
user_sensor_board_ver2/components/common/src/: dns_checker.c  i2c_helper.c  sensor_data.c  sensor_manager.c  sntp_helper.c  wifi_connect.c
user_sensor_board_ver2/components/gyro_sensor/: CMakeLists.txt
user_sensor_board_ver2/components/heart_sensor/: CMakeLists.txt
user_sensor_board_ver2/components/mqtt_common/: CMakeLists.txt
user_sensor_board_ver2/components/temp_sensor/: CMakeLists.txt
user_sensor_board_ver2/main/: CMakeLists.txt  main.c
(+42 files in other folders)
